--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.0.0",
     "envalid": "^7.3.1",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.6",
     "http-status": "^1.5.1",
     "jest-junit": "^13.2.0",
     "lodash": "^4.17.21",
