--- a/product-hub/package.json
+++ b/product-hub/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "ampq": "^2019.5.11",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
