--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-gateway",
+  "name": "api-orchestrator",
   "version": "1.0.0",
   "scripts": {
     "start": "yarn run build && yarn run serve:local",
