--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
   product-hub:
     image: node:18
     working_dir: /app
+    ports:
+      - 3004:3000
     volumes:
       - ./product-hub:/app
     command: sh -c 'yarn install && yarn start'
@@ -21,6 +23,8 @@ services:
   stock-hub:
     image: node:18
     working_dir: /app
+    ports:
+      - 3005:3000
     volumes:
       - ./stock-hub:/app
     command: sh -c 'yarn install && yarn start'
