--- a/stock-hub/package.json
+++ b/stock-hub/package.json
@@ -40,6 +40,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/amqplib": "^0.10.5",
+    "ampq": "^2019.5.11",
+    "amqplib": "^0.10.3",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
