--- a/cart-hub/package.json
+++ b/cart-hub/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stock-hub",
+  "name": "cart-hub",
   "version": "1.0.0",
   "scripts": {
     "start": "yarn run build && yarn run serve:local",
@@ -55,7 +55,7 @@
     "luxon": "^2.3.2",
     "mysql2": "^2.3.3",
     "newrelic": "^8.10.0",
-    "pino": "^8.19.0",
+    "pino": "^7.11.0",
     "pino-http": "^7.0.0",
     "pino-pretty": "^7.6.1",
     "reflect-metadata": "^0.1.13",
