--- a/cart-hub/package.json
+++ b/cart-hub/package.json
@@ -53,14 +53,13 @@
     "jest-junit": "^13.2.0",
     "lodash": "^4.17.21",
     "luxon": "^2.3.2",
-    "mysql2": "^2.3.3",
+    "mongodb-pool": "^2.0.3",
+    "mongoose": "^8.2.1",
     "newrelic": "^8.10.0",
     "pino": "^7.11.0",
     "pino-http": "^7.0.0",
     "pino-pretty": "^7.6.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.19.0",
-    "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.6",
     "supertest": "^6.2.3"
   },
