--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
     restart: on-failure
     command: sh -c 'yarn install && yarn start'
     depends_on:
-      - mysql
+      - mongodb
       - rabbitmq  
 
   rabbitmq:
